update the animation to correct point of collapse

--- a/src/styles/Inbox.module.css
+++ b/src/styles/Inbox.module.css
@@ -1385,7 +1385,7 @@
     to {
         width: 0;
         height: 0;
-        top: 45px;
+        top: 35px;
         opacity: 0;
     }
 }
